# finetune-for-detect-bug

./: .gitignore  AGENTS.md  Dockerfile  README.md  dvc.yaml  mlflow.db  pyproject.toml  train.py  train_notebook.ipynb
.github/workflows/: ci.yml
configs/: config.yaml
docs/: PLAN-model-trainer.md  code_reading_guide.md  dataset_card.md  inference.md  model_card.md  plan_update.md  training_bug_fixes.md
src/data/: data_ingestion.py  data_transformation.py  data_validation.py
src/entity/: config_entity.py
src/training/: mlflow_callback.py  model_loader.py  model_trainer.py  peft_setup.py  quantization_config.py  trainer_runner.py
src/utils/: __init__.py  config.py  exception.py
tests/integration/: test_training_pipeline.py
tests/training/: test_model_loader.py  test_model_trainer.py  test_trainer_runner.py
