[project]
name = "finetune-for-detect-bug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.49.2",
    "datasets>=4.7.0",
    "dvc>=3.66.1",
    "langchain-ollama>=1.0.1",
    "mlflow>=3.10.1",
    "numpy>=2.4.3",
    "peft>=0.18.1",
    "polars>=1.39.0",
    "pyyaml>=6.0.3",
    "transformers>=5.3.0",
    "trl>=0.29.0",
    "unsloth>=2025.7.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
